Inserted data into database

--- a/Gratify/templates/home.html
+++ b/Gratify/templates/home.html
@@ -73,7 +73,7 @@
 			<tr id="productPrice">
 				{% for row in data %}
 				<td>
-					${{row[2]}}
+					{{row[2]}}
 				</td>
 				{% endfor %}
 			</tr>
