--- a/Gratify/static/css/topStyle.css
+++ b/Gratify/static/css/topStyle.css
@@ -9,7 +9,7 @@
 }
 
 #title {
-	background-color: black;
+	background-color: rgb(216,191,216);
 	display: inline-block;
 	width: 100%;
 }
@@ -34,7 +34,7 @@
 }
 
 .dropbtn {
-	background-color: black;
+	background-color: rgb(216,191,216);
 	color: white;
 	padding: 16px;
 	font-size: 15px;
@@ -57,7 +57,7 @@
 
 .dropdown-content a {
 	font-size: 14px;
-	color: black;
+	color: rgb(216,191,216);
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
