--- a/Gratify/templates/login.html
+++ b/Gratify/templates/login.html
@@ -2,10 +2,10 @@
 <head>
 <title>	First flask app </title>
 </head>
-<body style = "text-align: center; background-color:rgb(105,105,105)">
+<body style = "text-align: center; background-color:rgb(216,191,216);">
 <h2 style = "text-align: center;">Login Form</h2>
 <p> {{error}} </p>
-<fieldset style="width:500px, float:left; background-color:rgb(192,192,192);">
+<fieldset style="width:500px, float:left; background-color:rgb(221,160,221);">
     <legend>Login Form</legend>
 <form action="/login" method="POST">
 	<p>Email: <input type="text" name="email"></p>
