--- a/Gratify/templates/register.html
+++ b/Gratify/templates/register.html
@@ -4,10 +4,10 @@
 <script type="text/javascript" src="{{ url_for('static', filename = 'js/validateForm.js') }}">
 </script>
 </head>
-<body style = "text-align: center;">
+<body style = "text-align: center;background-color:rgb(221,160,221);">
 <h2>Registration Form</h2>
 <form action="/register" method="POST" onsubmit="return validate()">
-    <fieldset style="width:500px, float:left; background-color:rgb(192,192,192);">
+    <fieldset style="width:500px, float:left; background-color:rgb(216,191,216);">
     <legend>Registration Form</legend>
     <p>Email: <input type="email" name="email"></p>
 
